--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Página inicial</h1>
+    <header>
+        <h1>Página inicial</h1>
+    </header>
+
+    <footer>
+
+    </footer>
+    
 </body>
 </html>
